Ajuste de codigo

--- a/public/pages/2-tema.html
+++ b/public/pages/2-tema.html
@@ -58,54 +58,54 @@
         </div>
         <div class="card">
             <div class="card-body">
-                <h1 class="mb-5" style="color: #1465C0">Objetivos de un Centro de Distribución</h1>
+                <h1 class="mb-5 text-color-1">Objetivos de un Centro de Distribución</h1>
                 <p class="mb-3">Los principales objetivos de un Centro de Distribución están enfocados en la eficiencia y eficacia de la operación, siendo un reto permanente la disminución de sus costos. De forma general se presentan los objetivos a continuación:</p>
                 <ul>
-                    <li style="color: #4DD0E0">
-                        <p style="color: #00223D">Realizar balanceo entre la producción y demanda de un producto, administrando adecuadamente su inventario.</p>
+                    <li class="text-blue">
+                        <p class="text-black">Realizar balanceo entre la producción y demanda de un producto, administrando adecuadamente su inventario.</p>
                     </li>
-                    <li style="color: #4DD0E0">
-                        <p style="color: #00223D">Entregar los materiales o productos bajo la metodología de justo a tiempo a los clientes finales.</p>
+                    <li class="text-blue">
+                        <p class="text-black">Entregar los materiales o productos bajo la metodología de justo a tiempo a los clientes finales.</p>
                     </li>
-                    <li style="color: #4DD0E0">
-                        <p style="color: #00223D">Tener control permanente sobre los inventarios de materiales y mercancías.</p>
+                    <li class="text-blue">
+                        <p class="text-black">Tener control permanente sobre los inventarios de materiales y mercancías.</p>
                     </li>
-                    <li style="color: #4DD0E0">
-                        <p style="color: #00223D">Desarrollar estrategias de consolidación de mercancía cuando provienen de diferentes plantas o empresas y su destino es un mismo cliente.</p>
+                    <li class="text-blue">
+                        <p class="text-black">Desarrollar estrategias de consolidación de mercancía cuando provienen de diferentes plantas o empresas y su destino es un mismo cliente.</p>
                     </li>
-                    <li style="color: #4DD0E0">
-                        <p style="color: #00223D">Alcanzar un movimiento permanente de la mercancía, con el fin de hacer más eficiente la operación.</p>
+                    <li class="text-blue">
+                        <p class="text-black">Alcanzar un movimiento permanente de la mercancía, con el fin de hacer más eficiente la operación.</p>
                     </li>
                 </ul>
-                <h1 class="text-center my-5" style="color: #4DD0E0"> El sistema logístico</h1><img class="img-fluid col-12" src="assets/images/pages/ilustraciones/sistema_logistico.svg" />
+                <h1 class="text-blue text-center my-5"> El sistema logístico</h1><img class="img-fluid col-12" src="assets/images/pages/ilustraciones/sistema_logistico.svg" />
             </div>
         </div>
-        <div class="card" style="background-color:#94E3EC"><img class="img-fluid" src="assets/images/pages/ilustraciones/actividades.png" style="margin-top: -4px" />
+        <div class="card bg-color-1"><img class="img-fluid" src="assets/images/pages/ilustraciones/actividades.png" style="margin-top: -4px" />
             <div class="col-11 col-md-8 mt-5">
                 <article class="custom-item d-flex align-items-center flex-column flex-md-row"><img class="custom-item-img my-2" src="assets/images/pages/ilustraciones/actividades1.svg" />
-                    <div class="card mb-0" style=" border-color: #94E3EC">
-                        <div class="card-body" style="background-color: #94E3EC"><strong>Procesos de recepción: </strong>es el primer proceso que se realiza en el flujo operacional del centro, está compuesto por la recepción y la ubicación de la mercancía que se puede recibir de diferentes formas, como se indica a continuación:</div>
+                    <div class="card bd-color-1 mb-0">
+                        <div class="card-body bg-color-1"><strong>Procesos de recepción: </strong>es el primer proceso que se realiza en el flujo operacional del centro, está compuesto por la recepción y la ubicación de la mercancía que se puede recibir de diferentes formas, como se indica a continuación:</div>
                     </div>
                 </article>
             </div>
             <div class="row justify-content-center mt-5">
                 <div class="col-12 col-md-3 my-6 my-md-0">
-                    <div class="card" style="border-color:#C3E7F9">
-                        <div class="card-body text-center" style="background-color:#C3E7F9">
+                    <div class="card bd-color-2">
+                        <div class="card-body text-center bg-color-2">
                             <div class="avatar avatar-xxl card-avatar"><img class="avatar-img" src="assets/images/pages/ilustraciones/ico1.svg" /></div><strong>Paletizado: </strong>hace referencia a la ubicación de la mercancía sobre estibas de madera o plástico, previo embalaje, el cual es realizado por el proveedor.
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 my-6 my-md-0">
-                    <div class="card" style="border-color:#C3E7F9">
-                        <div class="card-body text-center" style="background-color:#C3E7F9">
+                    <div class="card bd-color-2">
+                        <div class="card-body text-center bg-color-2">
                             <div class="avatar avatar-xxl card-avatar"><img class="avatar-img" src="assets/images/pages/ilustraciones/ico2.svg" /></div><strong>A granel: </strong>método utilizado para cierto tipo de mercancía que, por su cantidad y forma, deben ser entregados en empaques individuales, por ejemplo: el arroz, el frijol, azúcar, entre otros.
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 mt-6 my-md-0">
-                    <div class="card" style="border-color:#C3E7F9">
-                        <div class="card-body text-center" style="background-color:#C3E7F9">
+                    <div class="card bd-color-2">
+                        <div class="card-body text-center bg-color-2">
                             <div class="avatar avatar-xxl card-avatar"><img class="avatar-img" src="assets/images/pages/ilustraciones/ico3.svg" /></div><strong>En arrume: </strong>este tipo de recibo, se hace con productos en cajas o en bultos, ese es el caso del recibo del café.
                         </div>
                     </div>
@@ -115,15 +115,15 @@
             <div class="row align-items-center justify-content-center my-5">
                 <div class="col-12 col-md-6">
                     <article class="d-flex align-items-center flex-column flex-md-row"><img class="custom-item-img my-2" src="assets/images/pages/ilustraciones/actividades2.svg" />
-                        <div class="card mb-5" style=" border-color: #94E3EC">
-                            <div class="card-body" style="background-color: #94E3EC"><strong>Procesos de Almacenamiento: </strong>tiene como fin proteger y conservar los materiales o mercancía en condiciones óptimas durante un espacio de tiempo determinado, es decir, con las características y atributos con los cuales ingresaron al centro y con las que el cliente las necesita para satisfacer sus necesidades. </div>
+                        <div class="card bd-color-1 mb-5">
+                            <div class="card-body bg-color-1"><strong>Procesos de Almacenamiento: </strong>tiene como fin proteger y conservar los materiales o mercancía en condiciones óptimas durante un espacio de tiempo determinado, es decir, con las características y atributos con los cuales ingresaron al centro y con las que el cliente las necesita para satisfacer sus necesidades. </div>
                         </div>
                     </article>
                 </div>
                 <div class="col-12 col-md-5">
                     <article class="custom-item d-flex align-items-center flex-column flex-md-row"><img class="custom-item-img my-2" src="assets/images/pages/ilustraciones/actividades3.svg" />
-                        <div class="card mb-5" style=" border-color: #94E3EC">
-                            <div class="card-body" style="background-color: #94E3EC"><strong>Procesos de Salida: </strong>está compuesto por las actividades al final del flujo dentro del centro, tales como el picking, empaque y embarque.</div>
+                        <div class="card bd-color-1 mb-5">
+                            <div class="card-body bg-color-1"><strong>Procesos de Salida: </strong>está compuesto por las actividades al final del flujo dentro del centro, tales como el picking, empaque y embarque.</div>
                         </div>
                     </article>
                 </div>
@@ -153,7 +153,7 @@
                 </div>
             </div>
         </div>
-        <div class="py-3" style="background-color:#D4F4F7; border-radius:9px">
+        <div class="py-3 bg-color-3">
             <div class="row">
                 <div class="col-1 col-md-1 text-center" style="display: flex; justify-content: initial; flex-direction: column;"><img class="img-fluid ml-5" src="assets/images/pages/ilustraciones/comilla1.svg" /></div>
                 <div class="col-10 col-md-10">
