--- a/public/pages/3-tema.html
+++ b/public/pages/3-tema.html
@@ -30,14 +30,14 @@
                     <div class="col-12 col-md-5">
                         <p>Considerando que la empresa se comporta como un sistema, que se denominará sistema de información, y realizando una subdivisión más precisa en sus componentes, se puede considerar que el sistema de información es un trinomio constituido por (Díaz, 2013): </p><br />
                         <ul>
-                            <li style="color: #4DD0E0">
-                                <p style="color: #00223D">Una estructura de decisión.</p>
+                            <li class="text-blue">
+                                <p class="text-black">Una estructura de decisión.</p>
                             </li>
-                            <li style="color: #4DD0E0">
-                                <p style="color: #00223D">Una actividad transformadora y operante, concretada en un conjunto de reglas de gestión. </p>
+                            <li class="text-blue">
+                                <p class="text-black">Una actividad transformadora y operante, concretada en un conjunto de reglas de gestión. </p>
                             </li>
-                            <li style="color: #4DD0E0">
-                                <p style="color: #00223D">Un conjunto de informaciones. </p>
+                            <li class="text-blue">
+                                <p class="text-black">Un conjunto de informaciones. </p>
                             </li>
                         </ul>
                     </div>
@@ -45,13 +45,13 @@
                 </div>
             </div>
         </div>
-        <div class="py-3" style="background-color:#D4F4F7; border-radius:9px">
+        <div class="py-3 bg-color-3">
             <div class="row">
-                <div class="col-1 col-md-1 text-center"><img class="img-fluid ml-5" src="assets/images/pages/ilustraciones/comilla1.svg" /></div>
+                <div class="col-auto col-md-1 text-center"><img class="img-fluid ml-5" src="assets/images/pages/ilustraciones/comilla1.svg" /></div>
                 <div class="col-10 col-md-10">
                     <p class="mb-0 ml-4">Dicho sistema recibe unos estímulos concretados en solicitudes y utilizando el conjunto de las informaciones patrimonio del sistema, según indican sus reglas de gestión, elabora unos resultados que son enviados al exterior (Díaz, 2013). </p>
                 </div>
-                <div class="col-1 col-md-1 text-center"><img class="img-fluid mt-4 mr-5" src="assets/images/pages/ilustraciones/comilla2.svg" /></div>
+                <div class="col-auto col-md-1 text-center"><img class="img-fluid mt-4 mr-5" src="assets/images/pages/ilustraciones/comilla2.svg" /></div>
             </div>
         </div>
     </div>
@@ -66,63 +66,63 @@
                     <div class="col-lg-6">
                         <div class="accordion mt-5" id="accordionExample">
                             <div class="card">
-                                <div class="card-header" id="headingOne" style="background: #36AFEA">
-                                    <p style="margin-top: 1rem"><button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                            <p class="mb-2 text-center" style="font-size: 20px; color: #fff">Sistemas de procesamiento de transacciones</p>
+                                <div class="card-header bg-color-4" id="headingOne">
+                                    <p class="mt-3"><button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                            <p class="text-2 mb-2 text-center">Sistemas de procesamiento de transacciones</p>
                                         </button></p>
                                 </div>
                                 <div class="collapse show" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordionExample">
-                                    <div class="card-body" style="background: #D4F4F7">Los cuales procesan la información producida en la operación cotidiana de la organización, la cual es necesaria para toma de decisiones a nivel operacional y táctico. </div>
+                                    <div class="card-body bg-color-5">Los cuales procesan la información producida en la operación cotidiana de la organización, la cual es necesaria para toma de decisiones a nivel operacional y táctico. </div>
                                 </div>
                             </div>
                             <div class="card">
-                                <div class="card-header" id="headingTwo" style="background: #36AFEA">
-                                    <p style="margin-top: 1rem"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                <div class="card-header bg-color-4" id="headingTwo">
+                                    <p class="mt-3"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                                             <p class="mb-2 text-center" style="font-size: 20px; color: #fff">Sistema de control de procesos de negocio</p>
                                         </button></p>
                                 </div>
                                 <div class="collapse" id="collapseTwo" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                                    <div class="card-body" style="background: #D4F4F7">Permiten tener información en tiempo real del estado de la operación, específicamente en plantas industrial o de manufactura. </div>
+                                    <div class="card-body bg-color-5">Permiten tener información en tiempo real del estado de la operación, específicamente en plantas industrial o de manufactura. </div>
                                 </div>
                             </div>
                             <div class="card">
-                                <div class="card-header" id="headingThree" style="background: #36AFEA">
-                                    <p style="margin-top: 1rem"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                <div class="card-header bg-color-4" id="headingThree">
+                                    <p class="mt-3"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                             <p class="mb-2 text-center" style="font-size: 20px; color: #fff">Sistemas de colaboración empresarial</p>
                                         </button></p>
                                 </div>
                                 <div class="collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#accordionExample">
-                                    <div class="card-body" style="background: #D4F4F7">Es una de las opciones con mayor cobertura organizacional dada la posibilidad de múltiples usuarios, se puede integrar desde los proveedores hasta los clientes. </div>
+                                    <div class="card-body bg-color-5">Es una de las opciones con mayor cobertura organizacional dada la posibilidad de múltiples usuarios, se puede integrar desde los proveedores hasta los clientes. </div>
                                 </div>
                             </div>
                             <div class="card">
-                                <div class="card-header" id="headingFour" style="background: #36AFEA">
-                                    <p style="margin-top: 1rem"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
+                                <div class="card-header bg-color-4" id="headingFour">
+                                    <p class="mt-3"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
                                             <p class="mb-2 text-center" style="font-size: 20px; color: #fff">Sistemas de información de gestión</p>
                                         </button></p>
                                 </div>
                                 <div class="collapse" id="collapseFour" aria-labelledby="headingThree" data-parent="#accordionExample">
-                                    <div class="card-body" style="background: #D4F4F7">Se enfocan en apoyar la toma de decisiones a nivel gerencial, ya que soportan la gestión de la organización, con informes estadísticos que recopilan datos de diferentes fuentes. </div>
+                                    <div class="card-body bg-color-5">Se enfocan en apoyar la toma de decisiones a nivel gerencial, ya que soportan la gestión de la organización, con informes estadísticos que recopilan datos de diferentes fuentes. </div>
                                 </div>
                             </div>
                             <div class="card">
-                                <div class="card-header" id="headingFive" style="background: #36AFEA">
-                                    <p style="margin-top: 1rem"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
+                                <div class="card-header bg-color-4" id="headingFive">
+                                    <p class="mt-3"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
                                             <p class="mb-2 text-center" style="font-size: 20px; color: #fff">Sistema de apoyo a la toma de decisiones</p>
                                         </button></p>
                                 </div>
                                 <div class="collapse" id="collapseFive" aria-labelledby="headingThree" data-parent="#accordionExample">
-                                    <div class="card-body" style="background: #D4F4F7">Este modelo también sirve de soporte para la toma de decisiones gerenciales o directivas, especialmente cuando esta la necesidad de proyectar nuevos mercados o posibles inversiones de capital en nuevas unidades de negocio.</div>
+                                    <div class="card-body bg-color-5">Este modelo también sirve de soporte para la toma de decisiones gerenciales o directivas, especialmente cuando esta la necesidad de proyectar nuevos mercados o posibles inversiones de capital en nuevas unidades de negocio.</div>
                                 </div>
                             </div>
                             <div class="card">
-                                <div class="card-header" id="headingSix" style="background: #36AFEA">
-                                    <p style="margin-top: 1rem"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseThree">
+                                <div class="card-header bg-color-4" id="headingSix">
+                                    <p class="mt-3"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseThree">
                                             <p class="mb-2 text-center" style="font-size: 20px; color: #fff">Sistema de información ejecutiva</p>
                                         </button></p>
                                 </div>
                                 <div class="collapse" id="collapseSix" aria-labelledby="headingThree" data-parent="#accordionExample">
-                                    <div class="card-body" style="background: #D4F4F7">El cual presenta la información más relevante de la información de forma gráfica y dinámica, permitiendo conocer lo necesario para que la alta dirección tome las acciones pertinentes según la situación. </div>
+                                    <div class="card-body bg-color-5">El cual presenta la información más relevante de la información de forma gráfica y dinámica, permitiendo conocer lo necesario para que la alta dirección tome las acciones pertinentes según la situación. </div>
                                 </div>
                             </div>
                         </div>
