--- a/public/index.html
+++ b/public/index.html
@@ -48,8 +48,7 @@
                 <div class="brand-line-primary"></div>
                 <div class="card resultado-item">
                     <div class="card-body">
-                        <h5>Cód. 12150003</h5>
-                        <p class="mb-0">Definir variables primordiales en los sistemas de información de la organización.</p>
+                        <h5>Cód. 12150003</h5><strong>210101013-01: </strong>Definir variables primordiales en los sistemas de información de la organización.
                     </div>
                 </div>
             </div>
